examples/test/testpolicy1624.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1624
  namespace: namespace256
spec:
  podSelector:
    matchLabels:
      key10: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value6
          key17: value28
      podSelector:
        matchLabels:
          key25: value26
          key29: value41
          key0: value2
